Edits to get things to compile and refactoring PGDMath

--- a/GaitSymQt/CMakeLists.txt
+++ b/GaitSymQt/CMakeLists.txt
@@ -604,6 +604,7 @@ set(PROJECT_SOURCES
     ../src/ObjectiveMain.cpp
     ../src/ParseXML.cpp
     ../src/PCA.cpp
+    ../src/PGDMath.cpp
     ../src/PIDErrorInController.cpp
     ../src/PIDMuscleLengthController.cpp
     ../src/PlaneGeom.cpp
