Fixing the coordinate systems - hopefully

--- a/GaitSymQt/CMakeLists.txt
+++ b/GaitSymQt/CMakeLists.txt
@@ -48,7 +48,7 @@ if(CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL arm64)
 endif()
 
 # MuJoCo definitions
-add_compile_definitions(MC_CPP_USE_DOUBLE_PRECISION MC_IMPLEM_ENABLE MJ_STATIC)
+add_compile_definitions(MC_CPP_USE_DOUBLE_PRECISION MC_IMPLEM_ENABLE MJ_STATIC CCD_STATIC_DEFINE)
 
 # ODE definitions
 add_compile_definitions(dIDEDOUBLE dTRIMESH_ENABLED=1 dTRIMESH_OPCODE=1 dTRIMESH_GIMPACT=0 dTRIMESH_16BIT_INDICES=0
