Adding in control of lights

--- a/GaitSymQt/CMakeLists.txt
+++ b/GaitSymQt/CMakeLists.txt
@@ -1167,6 +1167,7 @@ set(PROJECT_SOURCES
     ../src/GSUtil.cpp
     ../src/HingeJoint.cpp
     ../src/Joint.cpp
+    ../src/LightBase.cpp
     ../src/LMotorJoint.cpp
     ../src/MAMuscle.cpp
     ../src/MAMuscleComplete.cpp
@@ -1306,6 +1307,7 @@ set(PROJECT_SOURCES
     ../src/GSUtil.h
     ../src/HingeJoint.h
     ../src/Joint.h
+    ../src/LightBase.h
     ../src/LMotorJoint.h
     ../src/MAMuscle.h
     ../src/MAMuscleComplete.h
