--- a/GaitSymQt/CMakeLists.txt
+++ b/GaitSymQt/CMakeLists.txt
@@ -1181,6 +1181,7 @@ set(PROJECT_SOURCES
     ../src/NPointStrap.cpp
     ../src/ObjectiveMain.cpp
     ../src/ODEPhysicsEngine.cpp
+    ../src/OpenSimExporter.cpp
     ../src/ParseXML.cpp
     ../src/PGDMath.cpp
     ../src/PhysicsEngine.cpp
@@ -1321,6 +1322,7 @@ set(PROJECT_SOURCES
     ../src/NPointStrap.h
     ../src/ObjectiveMain.h
     ../src/ODEPhysicsEngine.h
+    ../src/OpenSimExporter.h
     ../src/ParseXML.h
     ../src/PhysicsEngine.h
     ../src/PhysXPhysicsEngine.h
